force-app/main/default/objects/WBS_Item__c/fields/Actual_Finish__c.field-meta.xml
<CustomField>
    <fullName>Actual_Finish__c</fullName>
    <label>Actual Finish</label>
    <description>Capture point for actual end date: stamped when progress reaches 100%. Rolls up via CPMEngine.</description>
    <type>Date</type>
</CustomField>