force-app/main/default/objects/WBS_Item__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <label>Actual Start</label>
    <description>Stamped from first progress (DPR). Rolls up to parents via CPMEngine.</description>
    <type>Date</type>
</CustomField>