force-app/main/default/objects/WBS_Item__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <description>Person executing this item; the successor's assignee is alerted when a predecessor delay shifts them.</description>
    <referenceTo>User</referenceTo>
    <relationshipLabel>WBS Items (Assignee)</relationshipLabel>
    <relationshipName>WBS_Items_Assignee</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>