force-app/main/default/objects/WBS_Item__c/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <label>Custodian</label>
    <description>Owner accountable for this WBS item; receives delay escalations for its children.</description>
    <referenceTo>User</referenceTo>
    <relationshipLabel>WBS Items (Custodian)</relationshipLabel>
    <relationshipName>WBS_Items_Custodian</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>