force-app/main/default/objects/WBS_Item__c/fields/Delay_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Delay_Likelihood__c</fullName>
    <label>Delay Likelihood</label>
    <description>Rule-based likelihood band. Written by WBSDelayRiskService.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>true</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>