force-app/main/default/objects/WBS_Item__c/fields/Delay_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Delay_Risk_Score__c</fullName>
    <label>Delay Risk Score</label>
    <description>0-100 rule-based risk score (float + progress vs elapsed). Written by WBSDelayRiskService.</description>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>