force-app/main/default/objects/WBS_Item__c/fields/Float_Days__c.field-meta.xml
<CustomField>
    <fullName>Float_Days__c</fullName>
    <label>Total Float (Days)</label>
    <description>Total slack = Late Finish - Early Finish (working days). Written by CPMEngine. Leaf is critical when &lt;= 0.</description>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>