force-app/main/default/objects/WBS_Item__c/fields/Late_Start__c.field-meta.xml
<CustomField>
    <fullName>Late_Start__c</fullName>
    <label>Late Start</label>
    <description>CPM backward-pass late start. Written by CPMEngine.</description>
    <type>Date</type>
</CustomField>