force-app/main/default/objects/WBS_Item__c/fields/Likely_To_Delay_Project__c.field-meta.xml
<CustomField>
    <fullName>Likely_To_Delay_Project__c</fullName>
    <label>Likely To Delay Project</label>
    <description>True when this item is on/near the critical path and behind schedule. Written by WBSDelayRiskService.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>