force-app/main/default/objects/WBS_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>WBS Name</label>
    <description>Descriptive activity name (the record Name is an auto-number).</description>
    <length>255</length>
    <type>Text</type>
</CustomField>