force-app/main/default/objects/WBS_Item__c/fields/Project_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Project_Delay_Reason__c</fullName>
    <description>Plain-language summary of why this activity is at risk and which downstream activities are impacted. Generated automatically by the delay risk engine each time CPM runs.</description>
    <label>Project Delay Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>